grafana/observability-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observability-ingress
  namespace: observability
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: locus.192.168.50.135.nip.io
    http:
      paths:
      - backend:
          service:
            name: locust-master
            port:
              number: 8089
        path: /locust(/|$)(.*)
        pathType: Prefix
  - host: grafana.192.168.50.135.nip.io
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 3000
        path: /grafana(/|$)(.*)
        pathType: Prefix
  - host: prometheus.192.168.50.135.nip.io
    http:
      paths:
      - backend:
          service:
            name: prometheus-service
            port:
              number: 9090
        path: /prometheus(/|$)(.*)
        pathType: Prefix
  - host: elastic.192.168.50.135.nip.io
    http:
      paths:
      - backend:
          service:
            name: srv-elasticsearch
            port:
              number: 9200
        path: /
        pathType: Prefix
  ingressClassName: nginx
